# TurboCLI

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: python-tests.yml
cli/: __init__.py  _cli.py
tests/: test_hex.py  test_hex37.py
turbocli/: __init__.py  _core.py
